--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   background-image: linear-gradient(90deg, rgb(170, 236, 157), rgb(94, 94, 192));
   
   margin: 40px;
-  font-family: Arial, sans-serif;
+  font-family: Arial, Helvetica, sans-serif
 }
 
 nav li {
@@ -97,16 +97,7 @@ form {
   font-size: 14px;
   }
 
-.btnForm {
-  display: inline-block;
-  font-family: Arial, Helvetica, sans-serif;
-  justify-content: space-around;
-  margin-top: 10px;
-  padding: 2%;
-
-  }
-
-#nom
+#inputNom
   {
    background-color:rgb(33, 31, 31); ;
     color: rgb(251, 250, 249);
@@ -119,7 +110,7 @@ form {
     border-right : none;
   }
 
-  #email
+  #inputEmail
   {
    background-color:rgb(33, 31, 31); ;
     color: rgb(251, 250, 249);
@@ -133,7 +124,7 @@ form {
   }
 
 
-  #login  {
+  #inputLogin  {
    background-color:rgb(33, 31, 31); ;
     color: rgb(251, 250, 249);
     width:auto;
@@ -152,7 +143,7 @@ form {
     width:500px;
   }
 
-  #mdpVerif  {
+  #inputMdpVerif  {
     background-color:rgb(33, 31, 31); ;
      color: rgb(251, 250, 249);
      width:200px;
@@ -163,3 +154,18 @@ form {
      border-left : none;
      border-right : none;
    }
+
+   .btnForm {
+    display: flex;
+    color: blue;
+    align-items: center;
+    width: 100%;
+  
+    }
+
+
+   .error {
+    color: red;
+    font-size: 3em;
+    margin-top: 5px;
+}
